<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.2.2.RELEASE</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  
  <groupId>com.algaworks</groupId>
  <artifactId>algafood-api</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>algafood-api</name>
  <description>API de delivery de comida</description>

  <properties>
    <java.version>12</java.version>
    <squiggly.version>1.3.18</squiggly.version>
    <groovy.version>3.0.9</groovy.version>
    <jasperreports.version>6.21.3</jasperreports.version>
    <aws-s3.version>1.12.756</aws-s3.version>
    <spring-fox.version>2.9.2</spring-fox.version>
    <logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
    	<groupId>org.springframework.boot</groupId>
    	<artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-mail</artifactId>
	</dependency>
	<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-freemarker</artifactId>
	</dependency>
	
    <dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
    	<scope>runtime</scope>
    </dependency>
    <dependency>
    	<groupId>org.projectlombok</groupId>   
    	<artifactId>lombok</artifactId>
		<version>1.18.34</version>
    </dependency>
    <dependency>
		<groupId>org.flywaydb</groupId>
		<artifactId>flyway-core</artifactId>
	</dependency>
	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-lang3</artifactId>
	</dependency>
	<dependency>
		<groupId>io.rest-assured</groupId>
		<artifactId>rest-assured</artifactId>
		<scope>test</scope>
	</dependency>

    <dependency>
        <groupId>org.codehaus.groovy</groupId>
        <artifactId>groovy</artifactId>
    </dependency>
    
    <dependency>
		<groupId>com.github.bohnman</groupId>
		<artifactId>squiggly-filter-jackson</artifactId>
		<version>${squiggly.version}</version>
		<exclusions>
			<exclusion>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
    
    <dependency>
	  <groupId>org.modelmapper</groupId>
	  <artifactId>modelmapper</artifactId>
 	  <version>3.0.0</version>
	</dependency>
	
	<dependency>
	  <groupId>net.sf.jasperreports</groupId>
	  <artifactId>jasperreports</artifactId>
	  <version>${jasperreports.version}</version>
	</dependency>
	
	<dependency>
	  <groupId>net.sf.jasperreports</groupId>
	  <artifactId>jasperreports-functions</artifactId>
	  <version>${jasperreports.version}</version>
	</dependency>
	
	<dependency>
	    <groupId>com.amazonaws</groupId>
	    <artifactId>aws-java-sdk-s3</artifactId>
	    <version>${aws-s3.version}</version>
	</dependency>
	<dependency>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-hateoas</artifactId>
	</dependency>
	
<!-- Documentação -->    
	<dependency>
	    <groupId>io.springfox</groupId>
	    <artifactId>springfox-swagger2</artifactId>
	    <version>${spring-fox.version}</version>
	    <exclusions>
			<exclusion>
			<groupId>org.springframework.plugin</groupId>
			<artifactId>spring-plugin-core</artifactId>
	    </exclusion>
		</exclusions>
	</dependency>
	<dependency>
		<groupId>io.springfox</groupId>
	    <artifactId>springfox-swagger-ui</artifactId>
	    <version>${spring-fox.version}</version>
	    <exclusions>
			<exclusion>
			<groupId>org.springframework.plugin</groupId>
			<artifactId>spring-plugin-core</artifactId>
	    </exclusion>
		</exclusions>
	</dependency>
		<dependency>
		<groupId>io.springfox</groupId>
	    <artifactId>springfox-bean-validators</artifactId>
	    <version>${spring-fox.version}</version>
	    <exclusions>
			<exclusion>
			<groupId>org.springframework.plugin</groupId>
			<artifactId>spring-plugin-core</artifactId>
	    </exclusion>
		</exclusions>
	</dependency>
<!-- Documentação --> 

<!--Log-->
	<dependency>
	   <groupId>org.logback-extensions</groupId>
	   <artifactId>logback-ext-loggly</artifactId>
	   <version>0.1.2</version>
	</dependency>
<!--Log-->

<!-- Security -->
	<dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
<!-- Security -->

</dependencies>
    

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      
      <plugin>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-maven-plugin</artifactId>
            <configuration>
                <url>jdbc:mysql://localhost:3306/?serverTimezone=UTC</url>
                <user>root</user>
                <password>root</password>
                <schemas>
                    <schema>algafoodapi</schema>
                </schemas>
            </configuration>
       </plugin>
       
       <plugin>
		   <groupId>org.apache.maven.plugins</groupId>
		   <artifactId>maven-failsafe-plugin</artifactId>
	   </plugin>
       
    </plugins>
  </build>

</project>